# explainable_ai_stability_score_card

./: .gitignore  LICENSE  README.md  pyproject.toml
experiment_runners/: experiment_1_distilbert_sst2.py  experiment_2_t5_sst2.py  experiment_3_roberta_agnews.py  experiment_4_distilbert_agnews.py
stability_framework/: __init__.py  dataset_loader.py  model_loader.py  stability_assessor.py  stability_card_generator.py  stress_tests.py
stability_framework/explainers/: __init__.py  base.py  config.py  factory.py  integrated_gradients.py  lime_explainer.py  shap_explainer.py
stability_framework/metrics/: __init__.py  aggregator.py  attribution_diff.py  base.py  calculator.py  flip_rate.py  jaccard.py  spearman.py
tests/: .gitignore  README.md  conftest.py  test_integration.py  test_simple.py
