[project]
name = "stability-framework"
version = "1.0.0"
description = "A comprehensive tool for evaluating the stability of explanation methods in text classification models"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Academic Research Team" }
]
keywords = ["xai", "explainability", "stability", "nlp", "transformers", "interpretability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core ML and NLP libraries
    "torch>=1.10.0",
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    "tokenizers>=0.12.0",
    
    # Explanation methods
    "captum>=0.6.0",
    "lime>=0.2.0",
    "shap>=0.41.0",
    
    # Scientific computing
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    
    # Utility libraries
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    
    # Text processing
    "nltk>=3.7",
    "sentence-transformers>=2.2.0",
    
    # Configuration and utilities
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "jupyter>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stability_framework"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.black]
line-length = 120
target-version = ["py312", "py313"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
